<resources>
    <string name="app_name">BakingApp</string>
    <string name="recipe_icon_content_desc">Recipe icon</string>
    <string name="recipe_ingredients">Recipe Ingredients</string>
    <string name="recipe_steps">Recipe Steps</string>
    <string name="navigate_before">Navigate before</string>
    <string name="navigate_next">Navigate next</string>
    <string name="back_to_list">Back to list</string>
    <string name="exo_play">Exo play</string>
    <string name="exo_pause">Exo pause</string>
    <string name="video_loading_progress">Video loading progress</string>
    <string name="no_connection">No connection</string>
    <string name="blank_widget_text">Please select any recipe to see its ingredients here.</string>
    <string name="recipe_step_thumbnail">Recipe step thumbnail</string>
</resources>
