<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:id="@+id/card_recipe_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:foreground="?attr/selectableItemBackground"
        android:padding="@dimen/padding_default"
        app:cardCornerRadius="@dimen/cardview_default_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_default">

            <ImageView
                android:id="@+id/card_recipe_icon"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/recipe_icon_content_desc"
                android:padding="@dimen/padding_default"
                android:src="@drawable/recipe_icon"/>

            <TextView
                android:id="@+id/card_recipe_name"
                style="@style/textBoldCapsCenter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_default"
                android:padding="@dimen/padding_default"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</layout>